--- a/src/app/selectedimagesection/selectedimagesection.component.html
+++ b/src/app/selectedimagesection/selectedimagesection.component.html
@@ -17,5 +17,8 @@
   <div class="card-body">
     <input type="hidden" id="displayImageAddressInput" value="../assets/img/objects/forest.jpg"/>
     <img id="displayedObjectImage" class="w-100" src="../assets/img/objects/forest.jpg">
+    <div>{{ detalizationProperty.value }}</div>
+    <div>{{ panoramityProperty.value }}</div>
+    <div>{{ wishToChangeProperty.value }}</div>
   </div>
 </div>
