--- a/src/app/selectedimagesection/selectedimagesection.component.html
+++ b/src/app/selectedimagesection/selectedimagesection.component.html
@@ -20,5 +20,6 @@
     <div>{{ detalizationProperty.value }}</div>
     <div>{{ panoramityProperty.value }}</div>
     <div>{{ wishToChangeProperty.value }}</div>
+    <div>{{ selectedImageIndex }}</div>
   </div>
 </div>
