--- a/src/app/image-name/image-name.component.html
+++ b/src/app/image-name/image-name.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="col-auto">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="formCheck-7">
+        <input class="form-check-input" type="checkbox" id="formCheck-7" [checked]="isChecked()">
         <label class="form-check-label" for="formCheck-1"></label>
       </div>
     </div>
