--- a/src/app/selectedimagesection/selectedimagesection.component.html
+++ b/src/app/selectedimagesection/selectedimagesection.component.html
@@ -21,5 +21,6 @@
     <div>{{ panoramityProperty.value }}</div>
     <div>{{ wishToChangeProperty.value }}</div>
     <div>{{ selectedImageIndex }}</div>
+    <div>{{ selectedTechniqueIndex }}</div>
   </div>
 </div>
