--- a/src/app/selecttechniquesection/selecttechniquesection.component.html
+++ b/src/app/selecttechniquesection/selecttechniquesection.component.html
@@ -3,89 +3,6 @@
     <h6 class="text-primary fw-bold m-0">Техники</h6>
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item technique" data-start-detalization="30" data-end-detalization="80" data-start-panoramity="50" data-end-panoramity="100">
-      <div class="row align-items-center no-gutters">
-        <div class="col me-2">
-          <h6 class="mb-0"><strong>Сенсоризация</strong></h6>
-          <span class="text-xs">Ощупывание + Рассматривание вблизи</span>
-        </div>
-        <div class="col-auto">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="formCheck-1">
-            <label class="form-check-label" for="formCheck-1"></label>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item technique" data-start-detalization="30" data-end-detalization="80" data-start-panoramity="50" data-end-panoramity="100">
-      <div class="row align-items-center no-gutters">
-        <div class="col me-2">
-          <h6 class="mb-0"><strong>Рассматривание Деталей</strong></h6>
-          <span class="text-xs">11:30 AM</span>
-        </div>
-        <div class="col-auto">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="formCheck-2">
-            <label class="form-check-label" for="formCheck-2"></label>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item technique" data-start-detalization="30" data-end-detalization="80" data-start-panoramity="50" data-end-panoramity="100">
-      <div class="row align-items-center no-gutters">
-        <div class="col me-2">
-          <h6 class="mb-0"><strong>Изменение ракурса</strong></h6>
-          <span class="text-xs">12:30 AM</span>
-        </div>
-        <div class="col-auto">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="formCheck-3">
-            <label class="form-check-label" for="formCheck-3"></label>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item technique" data-start-detalization="30" data-end-detalization="80" data-start-panoramity="50" data-end-panoramity="100">
-      <div class="row align-items-center no-gutters">
-        <div class="col me-2">
-          <h6 class="mb-0"><strong>Поднимать предметы и называть их</strong></h6>
-          <span class="text-xs">12:30 AM</span>
-        </div>
-        <div class="col-auto">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="formCheck-6">
-            <label class="form-check-label" for="formCheck-3"></label>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item technique" data-start-detalization="30" data-end-detalization="80" data-start-panoramity="50" data-end-panoramity="100">
-      <div class="row align-items-center no-gutters">
-        <div class="col me-2">
-          <h6 class="mb-0"><strong>Изменение ракурса</strong></h6>
-          <span class="text-xs">12:30 AM</span>
-        </div>
-        <div class="col-auto">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="formCheck-5">
-            <label class="form-check-label" for="formCheck-3"></label>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item technique" data-start-detalization="30" data-end-detalization="80" data-start-panoramity="50" data-end-panoramity="100">
-      <div class="row align-items-center no-gutters">
-        <div class="col me-2">
-          <h6 class="mb-0"><strong>Изменение ракурса</strong></h6>
-          <span class="text-xs">12:30 AM</span>
-        </div>
-        <div class="col-auto">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="formCheck-4">
-            <label class="form-check-label" for="formCheck-3"></label>
-          </div>
-        </div>
-      </div>
-    </li>
+    <app-technique-name *ngFor="let technique of techniques; let i = index" [technique]="technique" [selectedTechniqueIndex]="selectedTechniqueIndex" [currentTechniqueIndex]="i" (onSelectedTechniqueChange)="setSelectedTechnique($event)"></app-technique-name>
   </ul>
 </div>
