--- a/src/app/chartsection/chartsection.component.html
+++ b/src/app/chartsection/chartsection.component.html
@@ -22,4 +22,6 @@
   <div>{{ detalizationProperty.value }}</div>
   <div>{{ panoramityProperty.value }}</div>
   <div>{{ wishToChangeProperty.value }}</div>
+  <div>{{ selectedImageIndex }}</div>
+  <div>{{ selectedTechniqueIndex }}</div>
 </div>
