--- a/src/app/image-name/image-name.component.html
+++ b/src/app/image-name/image-name.component.html
@@ -1,4 +1,4 @@
-<li class="list-group-item" (click)="setSelectedChange()">
+<li class="list-group-item" (click)="setSelectedImageChange()">
   <div class="row align-items-center no-gutters">
     <div class="col me-2">
       <h6 class="mb-0 imageSelector"><strong>{{ imageName.name }}</strong></h6>
