--- a/src/app/selectedimagesection/selectedimagesection.component.html
+++ b/src/app/selectedimagesection/selectedimagesection.component.html
@@ -15,8 +15,8 @@
     </div>
   </div>
   <div class="card-body">
-    <input type="hidden" id="displayImageAddressInput" value="../assets/img/objects/forest.jpg"/>
-    <img id="displayedObjectImage" class="w-100" [src]="imgSrc()">
+    <canvas #myCanvas> </canvas>
+    <img id="displayedObjectImage" class="w-100" [src]="imgSrc()" #myImage>
     <div>{{ detalizationProperty.value }}</div>
     <div>{{ panoramityProperty.value }}</div>
     <div>{{ wishToChangeProperty.value }}</div>
