--- a/src/app/selectedimagesection/selectedimagesection.component.html
+++ b/src/app/selectedimagesection/selectedimagesection.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="card-body">
-    <canvas #myCanvas> </canvas>
+    <canvas class="w-100" #myCanvas > </canvas>
     <img id="displayedObjectImage" class="w-100" [src]="imgSrc()" #myImage>
     <div>{{ detalizationProperty.value }}</div>
     <div>{{ panoramityProperty.value }}</div>
