a correct formula for setting range

--- a/src/app/selectedimagesection/selectedimagesection.component.html
+++ b/src/app/selectedimagesection/selectedimagesection.component.html
@@ -16,6 +16,7 @@
   </div>
   <div class="card-body">
     <canvas class="w-100" #myCanvas > </canvas>
+    <input [(ngModel)]="detalizationProperty.value" (ngModelChange)="drawImage()"/>
     <img id="displayedObjectImage" class="w-100" [src]="imgSrc()" #myImage>
     <div>{{ detalizationProperty.value }}</div>
     <div>{{ panoramityProperty.value }}</div>
