--- a/src/app/property-slider/property-slider.component.html
+++ b/src/app/property-slider/property-slider.component.html
@@ -1,4 +1,4 @@
 <div class="slidecontainer">
   <h4 class="small fw-bold">{{ phaseProperty.name }}<span class="float-end">{{ valuePercentage() }}</span></h4>
-  <input class="form-range" [(ngModel)]="phaseProperty.value" type="range" min="0" max="100" step="1">
+  <input class="form-range" [value]="_phasePropertyValue" (input)="setPropertyValue($event)" type="range" min="0" max="100" step="1">
 </div>
