--- a/src/app/selectedimagesection/selectedimagesection.component.html
+++ b/src/app/selectedimagesection/selectedimagesection.component.html
@@ -16,9 +16,7 @@
   </div>
   <div class="card-body">
     <canvas class="w-100" #myCanvas > </canvas>
-    <input [(ngModel)]="detalizationProperty.value" (ngModelChange)="drawImage()"/>
-    <img id="displayedObjectImage" class="w-100" [src]="imgSrc()" #myImage>
-    <div>{{ detalizationProperty.value }}</div>
+    <div>{{ _detalizationPropertyValue }}</div>
     <div>{{ panoramityProperty.value }}</div>
     <div>{{ wishToChangeProperty.value }}</div>
     <div>{{ selectedImageIndex }}</div>
