--- a/src/app/slidepropertiessection/slidepropertiessection.component.html
+++ b/src/app/slidepropertiessection/slidepropertiessection.component.html
@@ -4,7 +4,7 @@
       <h6 class="text-primary fw-bold m-0">Компоненты</h6>
     </div>
     <div class="card-body">
-      <app-property-slider [phaseProperty]="detalizationProperty"></app-property-slider>
+      <app-property-slider [phaseProperty]="detalizationProperty" (onPropertyChanged)="setDetalizationValue($event)"></app-property-slider>
       <app-property-slider [phaseProperty]="panoramityProperty"></app-property-slider>
       <app-property-slider [phaseProperty]="wishToChangeProperty"></app-property-slider>
     </div>
