--- a/src/app/selectedimagesection/selectedimagesection.component.html
+++ b/src/app/selectedimagesection/selectedimagesection.component.html
@@ -17,7 +17,7 @@
   <div class="card-body">
     <canvas class="w-100" #myCanvas > </canvas>
     <div>{{ _detalizationPropertyValue }}</div>
-    <div>{{ panoramityProperty.value }}</div>
+    <div>{{ _panoramityPropertyValue }}</div>
     <div>{{ wishToChangeProperty.value }}</div>
     <div>{{ selectedImageIndex }}</div>
     <div>{{ selectedTechniqueIndex }}</div>
