--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,8 @@
               [selectedImageIndex]="selectedImageIndex"
               [techniques]="techniques"
               [selectedTechniqueIndex]="selectedTechniqueIndex"
+              [detalizationPropertyValue]="detalizationPropertyValue"
+              [panoramityPropertyValue]="panoramityPropertyValue"
             ></app-chartsection>
           </div>
         </div>
