sliders work with techniques

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,6 +45,7 @@
               [detalizationProperty]="detalizationProperty"
               [panoramityProperty]="panoramityProperty"
               [wishToChangeProperty]="wishToChangeProperty"
+              [selectedTechniqueIndex]="selectedTechniqueIndex"
               (onDetalizationPropertyChanged)="setDetalizationValue($event)"
               (onPanoramityPropertyChanged)="setPanoramityValue($event)"
             ></app-slidepropertiessection>
