--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div id="wrapper">
   <div class="d-flex flex-column" id="content-wrapper">
     <div id="content">
-      <app-header></app-header>
+      <app-header
+        [selectedHeaderTabIndex]="selectedHeaderTabIndex"
+        [headerTabs]="headerTabs"
+      ></app-header>
       <div class="container-fluid">
         <div class="row">
           <div class="col-12 col-lg-7">
