--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,36 +1,14 @@
 <section id="carousel">
   <div class="carousel slide" data-bs-ride="carousel" id="carousel-1">
     <div class="carousel-inner">
-      <div class="carousel-item">
-        <div class="bg-light border rounded border-light pulse animated hero-nature carousel-hero jumbotron py-5 px-4">
-          <h1 class="hero-title">Hero Nature</h1>
-          <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-          <p><a class="btn btn-primary hero-button plat" role="button" href="#">Learn more</a></p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="bg-light border rounded border-light pulse animated hero-photography carousel-hero jumbotron py-5 px-4">
-          <h1 class="hero-title">Hero Photography</h1>
-          <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-          <p><a class="btn btn-primary hero-button plat" role="button" href="#">Learn more</a></p>
-        </div>
-      </div>
-      <div class="carousel-item active">
-        <div class="bg-light border rounded border-light pulse animated hero-technology carousel-hero jumbotron py-5 px-4">
-          <h1 class="hero-title">Гіперреальність</h1>
-          <p class="hero-subtitle">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-          <p><a class="btn btn-primary hero-button plat" role="button" href="#">Записатись на тренінг</a> <a class="btn btn-primary hero-button plat" role="button" href="#">Стати Спонсором</a></p>
-        </div>
-      </div>
+      <app-header-tab *ngFor="let tab of headerTabs; let i = index" [tab]="tab" [isActive]="i == 0"></app-header-tab>
     </div>
     <div>
       <a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a>
       <a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a>
     </div>
     <ol class="carousel-indicators">
-      <li data-bs-target="#carousel-1" data-bs-slide-to="0"></li>
-      <li data-bs-target="#carousel-1" data-bs-slide-to="1"></li>
-      <li data-bs-target="#carousel-1" data-bs-slide-to="2" class="active"></li>
+      <app-header-tab-link *ngFor="let tab of headerTabs; let i = index" [theNumber]="i" [isActive]="i == 0" ></app-header-tab-link>
     </ol>
   </div>
 </section>
