--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,11 @@
 <section id="carousel">
   <div class="carousel slide" data-bs-ride="carousel" id="carousel-1">
     <div class="carousel-inner">
-      <app-header-tab *ngFor="let tab of headerTabs; let i = index" [tab]="tab" [isActive]="i == 0"></app-header-tab>
+      <app-header-tab *ngFor="let tab of headerTabs; let i = index" [tab]="tab" [isActive]="i == selectedHeaderTabIndex"></app-header-tab>
     </div>
     <div>
-      <a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a>
-      <a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a>
+      <a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev" (click)="setSelectedHeaderTab(previousTabIndex)"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a>
+      <a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next" (click)="setSelectedHeaderTab(nextTabIndex)"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a>
     </div>
-    <ol class="carousel-indicators">
-      <app-header-tab-link *ngFor="let tab of headerTabs; let i = index" [theNumber]="i" [isActive]="i == 0" ></app-header-tab-link>
-    </ol>
   </div>
 </section>
