--- a/assets/css/best-carousel-slide.css
+++ b/assets/css/best-carousel-slide.css
@@ -213,7 +213,7 @@ div.jumbotron.hero-phantom-limbs {
 }
 
 h1.hero-title, h2.hero-title, h3.hero-title {
-  text-shadow: 0 3px 3px rgba(0,0,0,0.4);
+  text-shadow: 0 3px 3px rgba(0,0,0,0.5);
   color: #fff;
 }
 
@@ -222,6 +222,8 @@ p.hero-subtitle {
   margin: 25px auto;
   padding: 10px 15px;
   color: #fff;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
 }
 
 .plat {
