made it work for desire-to-change as well

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
             <app-chartsection
               [detalizationProperty]="detalizationProperty"
               [panoramityProperty]="panoramityProperty"
-              [wishToChangeProperty]="wishToChangeProperty"
+              [desireToChangeProperty]="desireToChangeProperty"
               [imageNames]="imageNames"
               [selectedImageIndex]="selectedImageIndex"
               [techniques]="techniques"
@@ -32,7 +32,7 @@
             <app-selectedimagesection
               [detalizationProperty]="detalizationProperty"
               [panoramityProperty]="panoramityProperty"
-              [wishToChangeProperty]="wishToChangeProperty"
+              [desireToChangeProperty]="desireToChangeProperty"
               [imageNames]="imageNames"
               [selectedImageIndex]="selectedImageIndex"
               [techniques]="techniques"
@@ -50,7 +50,7 @@
             <app-slidepropertiessection
               [detalizationProperty]="detalizationProperty"
               [panoramityProperty]="panoramityProperty"
-              [wishToChangeProperty]="wishToChangeProperty"
+              [desireToChangeProperty]="desireToChangeProperty"
               [selectedTechniqueIndex]="selectedTechniqueIndex"
               (onDetalizationPropertyChanged)="setDetalizationValue($event)"
               (onPanoramityPropertyChanged)="setPanoramityValue($event)"
