--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,6 +54,7 @@
               [selectedTechniqueIndex]="selectedTechniqueIndex"
               (onDetalizationPropertyChanged)="setDetalizationValue($event)"
               (onPanoramityPropertyChanged)="setPanoramityValue($event)"
+              (onDesireToChangePropertyChanged)="setDesireToChangeValue($event)"
             ></app-slidepropertiessection>
           </div>
         </div>
