--- a/src/app/technique-name/technique-name.component.html
+++ b/src/app/technique-name/technique-name.component.html
@@ -3,6 +3,10 @@
     <div class="col me-2">
       <h6 class="mb-0"><strong>{{ technique.name }}</strong></h6>
       <span class="text-xs">{{technique.description}}</span>
+      <p *ngIf="technique.tutorialUrl" class="text-xs mb-0">
+        Как делать:
+        <a href="technique.tutorialUrl" target="_blank">ссылка на видео</a>
+      </p>
     </div>
     <div class="col-auto">
       <div class="form-check">
