--- a/src/app/selectedimagesection/selectedimagesection.component.html
+++ b/src/app/selectedimagesection/selectedimagesection.component.html
@@ -1,4 +1,4 @@
-<div class="card shadow mb-4">
+<div class="card shadow mb-4" id="selectedImageDemo">
   <div class="card-header d-flex justify-content-between align-items-center">
     <h6 class="text-primary fw-bold m-0">Картинка</h6>
   </div>
