--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css');
+
+.carousel-item.active {
+  -webkit-transition: all 0.5s 5.8s ease, all 0.5s 0s ease;
+  -moz-transition: all 0.5s 5.8s ease, all 0.5s 0s ease;
+  -o-transition: all 0.5s 5.8s ease, all 0.5s 0s ease;
+  transition: all 0.5s 5.8s ease, all 0.5s 0s ease;
+}
