--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,18 +11,30 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12 col-lg-6">
-            <app-trainingvideosection></app-trainingvideosection>
+            <app-trainingvideosection
+              [videoTitle]="videos[0].title"
+              [videoUrl]="videos[0].url"
+            ></app-trainingvideosection>
           </div>
           <div class="col-12 col-lg-6">
-            <app-trainingvideosection></app-trainingvideosection>
+            <app-trainingvideosection
+              [videoTitle]="videos[1].title"
+              [videoUrl]="videos[1].url"
+            ></app-trainingvideosection>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-lg-6">
-            <app-trainingvideosection></app-trainingvideosection>
+            <app-trainingvideosection
+              [videoTitle]="videos[2].title"
+              [videoUrl]="videos[2].url"
+            ></app-trainingvideosection>
           </div>
           <div class="col-12 col-lg-6">
-            <app-trainingvideosection></app-trainingvideosection>
+            <app-trainingvideosection
+              [videoTitle]="videos[3].title"
+              [videoUrl]="videos[3].url"
+            ></app-trainingvideosection>
           </div>
         </div>
         <div class="row">
