--- a/src/app/trainingvideosection/trainingvideosection.component.html
+++ b/src/app/trainingvideosection/trainingvideosection.component.html
@@ -1,6 +1,6 @@
 <div class="card shadow mb-4">
   <div class="card-header d-flex justify-content-between align-items-center">
-    <h6 class="text-primary fw-bold m-0">Тренинг</h6>
+    <h6 class="text-primary fw-bold m-0">{{ videoTitle }}</h6>
     <div class="dropdown no-arrow">
       <button class="btn btn-link btn-sm dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button">
         <i class="fas fa-ellipsis-v text-gray-400"></i>
@@ -15,6 +15,6 @@
     </div>
   </div>
   <div class="card-body">
-    <iframe class="w-100" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/kt-2WmrSsnM" width="560" height="315"></iframe>
+    <iframe class="w-100" frameborder="0" [src]="safeSrc" title="YouTube video player" width="560" height="315" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
   </div>
 </div>
