--- a/src/app/header-tab/header-tab.component.html
+++ b/src/app/header-tab/header-tab.component.html
@@ -3,7 +3,7 @@
     <h1 class="hero-title">{{ tab.name }}</h1>
     <p class="hero-subtitle">{{ tab.description }}</p>
     <p>
-      <a class="btn btn-primary hero-button plat mx-1" role="button" href="https://patreon.com/vinogradoff_group_tip_jar">Записаться на тренинг</a>
-      <a class="btn btn-primary hero-button plat mx-1" role="button" href="https://patreon.com/vinogradoff_group_tip_jar">Стать Спонсором</a></p>
+      <a class="btn btn-primary hero-button plat m-1" role="button" href="https://patreon.com/vinogradoff_group_tip_jar">Записаться на тренинг</a>
+      <a class="btn btn-primary hero-button plat m-1" role="button" href="https://patreon.com/vinogradoff_group_tip_jar">Стать Спонсором</a></p>
   </div>
 </div>
