--- a/assets/css/best-carousel-slide.css
+++ b/assets/css/best-carousel-slide.css
@@ -226,6 +226,15 @@ p.hero-subtitle {
   border-radius: 1rem;
 }
 
+div.hero-training {
+  max-width: 600px;
+  margin: 25px auto;
+  padding: 10px 15px;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 1rem;
+}
+
 .plat {
   border-radius: 0px;
 }
